--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+server.port = 8005
+spring.jpa.show-sql = true
+spring.datasource.url = jdbc\:postgresql\://localhost\:8683/MoodyDB
+spring.datasource.username = postgres
 
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+management.security.enabled = false
+spring.jpa.properties.hibernate.auto_quote_keyword = true
